--- a/brands.html
+++ b/brands.html
@@ -1989,9 +1989,10 @@
                     <li class="nav-item">
                         <a href="random.html" class="nav-link ">Random </a>
                     </li>
-                    <li class="nav-item">
+                    
+                    <!-- <li class="nav-item">
                         <a href="peak.html" class="nav-link ">Random </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
