--- a/random.html
+++ b/random.html
@@ -2096,7 +2096,7 @@
             $("#randomMain").append(`<div class="col-lg-2 col-md-2 col-sm-6 col-6" id="Brand-${key}">
                                             <figure class="snip1466">
                                                 <img src=${video.cover_url} alt="sample52" />
-                                                <a href="Search?brand=${video.name}" class="nav-link " style="padding-top:30px; "></a>
+                                                <a href="Video.html?id=${video.id}" class="nav-link " style="padding-top:30px; "></a>
                                                 <p style="font-size:large" id="BrandSpan-${key}"><span>${video.name}</span></p>
                                             </figure>
                                         </div>`);
