--- a/categories.html
+++ b/categories.html
@@ -1978,7 +1978,7 @@
                         <a href="index.html" class="nav-link logo">Titties </a>
                     </li>
                     <li class="nav-item">
-                        <a href="categories.html" class="nav-link ">Search </a>
+                        <a href="search.html" class="nav-link ">Search </a>
                     </li>
                     <li class="nav-item">
                         <a href="categories.html" class="nav-link ">Categories </a>
