--- a/search.html
+++ b/search.html
@@ -2034,9 +2034,6 @@
                                                         <a class="button sort" data-filter="city">City</a>
                                                 </div> -->
                                             </div>
-                                            <div id="searchMain">
-
-                                            </div>
                                             <!-- 	<div class="row">
                                             <div class="medium-6 columns">
                                               <button id="search" type="button" class="button expanded">Search</button>
@@ -2044,6 +2041,11 @@
                                           </div> -->
                                         </form>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="row Main" id="searchMain">
+                                    
                                 </div>
                             </div>
                         </div>
