--- a/search.html
+++ b/search.html
@@ -2018,28 +2018,15 @@
                                             <i class="fas fa-2x fa-sync-alt fa-spin"></i>
                                         </div>
                                         <h2 style="text-align:center">Search</h2>
-                        
-                                        <form>
-                                            <div class="row"style="text-align:center">
-                                                <input id="searchText" type="text" placeholder="search">
-                                                <!-- <label>Search by:
-                                                        <select id="searchField">
-                                                            <option value="name">Name</option>
-                                                            <option value="city">City</option>
-                                                        </select>
-                                                </label>
-                                                <div class="button-group">
-                                                    <label>Sort by:</label>
-                                                        <a class="button sort" data-filter="name">Name</a>
-                                                        <a class="button sort" data-filter="city">City</a>
-                                                </div> -->
+                                        <div class="row ">
+                                            <div class="col-4">
                                             </div>
-                                            <!-- 	<div class="row">
-                                            <div class="medium-6 columns">
-                                              <button id="search" type="button" class="button expanded">Search</button>
+                                            <div class="col-4">
+                                                <input type="text" id="searchText" class="form-control" style="margin: auto;display: block;" size="50" placeholder="Search" title="Type in a name">
                                             </div>
-                                          </div> -->
-                                        </form>
+                                            <div class="col-4">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
