search and video

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             $.each(videosLatestFiltered, function (key, video) {
                 $("#Main-carousel").append(`<figure class="snip1466">
                                                             <img src=${video.cover_url} alt="sample52" />
-                                                            <a href="Video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
+                                                            <a href="video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
                                                             <p style="font-size:large"> <span>${video.name}</span></p>
                                                         </figure>`);
             })
@@ -356,7 +356,7 @@
             $.each(selectedTrending, function (key, video) {
                 $("#Trending-carousel").append(`<figure class="snip1466">
                                                             <img src=${video.cover_url} alt="sample52" />
-                                                            <a href="Video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
+                                                            <a href="video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
                                                             <p style="font-size:large"> <span>${video.name}</span></p>
                                                         </figure>`);
             })
@@ -385,7 +385,7 @@
             $.each(selectedShuffledVideos, function (key, video) {
                 $("#Random-carousel").append(`<figure class="snip1466">
                                                             <img src=${video.cover_url} alt="sample52" />
-                                                            <a href="Video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
+                                                            <a href="video.html?id=${video.id}" class="nav-link " style="padding-top:30px;"></a>
                                                             <p style="font-size:large"> <span>${video.name}</span></p>
                                                         </figure>`);
             })
