--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                                             <div class="col-lg-5 col-md-5 col-sm-12" style="padding-top:3%;text-align:center;">
                                                             </div>
                                                             <div class="col-lg-2 col-md-2 col-sm-12" style="padding-top:3%;text-align:center;">
-                                                                <h3 style="font-weight:800; opacity:0.8" id="mainH3BrandName"><a href="search.html?tag=${peakOfTheDayVideo.brand}" class="nav-link " style="padding-top:30px;"><i>${peakOfTheDayVideo.brand} 's</i></a></h3>
+                                                                <h3 style="font-weight:800; opacity:0.8" id="mainH3BrandName"><a href="search.html?brand=${peakOfTheDayVideo.brand}" class="nav-link " style="padding-top:30px;"><i>${peakOfTheDayVideo.brand} 's</i></a></h3>
                                                             </div>
                                                             <div class="col-lg-5 col-md-5 col-sm-12" style="padding-top:3%;text-align:center;">
                                                             </div>
