--- a/video.html
+++ b/video.html
@@ -2091,7 +2091,7 @@
                                             <div class="row">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-12" style="text-align:center;">
                                                     <h3 style="font-weight:800; opacity:0.8"><i>
-                                                            <a style="color:#FFFFFF;" href="search.html?tag=${finalData.brand}" class=" btnTag btn-1 hover-filled-slide-right">${finalData.brand} 's</a>
+                                                            <a style="color:#FFFFFF;" href="search.html?brand=${finalData.brand}" class=" btnTag btn-1 hover-filled-slide-right">${finalData.brand} 's</a>
                                                         </i>
                                                     </h3>
                         
