--- a/brands.html
+++ b/brands.html
@@ -2112,7 +2112,7 @@
                 $("#brandsMain").append(`<div class="col-lg-2 col-md-2 col-sm-6 col-6" id="Brand-${key}">
                                             <figure class="snip1466">
                                                 <img src=${brand.PhotoLink} alt="sample52" />
-                                                <a href="video.html?id=${brand.Name}" class="nav-link " style="padding-top:30px; "></a>
+                                                <a href="search.html?brand=${brand.Name}" class="nav-link " style="padding-top:30px; "></a>
                                                 <p style="font-size:large" id="BrandSpan-${key}"><span>${brand.Name}</span></p>
                                             </figure>
                                         </div>`);
