--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
     <!-- <script src="https://cdn.viblast.com/vb/stable/viblast.js"></script> -->
 
     <style>
+        body, input, .sort {
+          font-family: 'Open Sans', 'Roboto', 'Ysabeau SC', sans-serif;
+          font-weight: 300;
+        }
         #myBtn {
             display: none;
             position: fixed;
