--- a/search.html
+++ b/search.html
@@ -88,11 +88,10 @@
     <!-- <script src="https://cdn.viblast.com/vb/stable/viblast.js"></script> -->
     <script src="./lib/viblast.js"></script>
     <script src="./aaa.js"></script>
-    <style>@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+    <style>
         body, input, .sort {
-          font-family: 'Open Sans', sans-serif;
+          font-family: 'Open Sans', 'Roboto', 'Ysabeau SC', sans-serif;
           font-weight: 300;
-          background:#f2f3f5;
         }
         
         #sandbox {
@@ -2395,7 +2394,7 @@
                             <div class="listb">
                               <ul class="list row" id="list">
                               </ul>
-                              <div class="lpagignate"><span class="jPaginateBack page-arrow"><</span>
+                              <div class="lpagignate"><span class="jPaginateBack page-arrow"></span>
                                 <ul class="pagination"></ul><span class="jPaginateNext page-arrow">></span></div>
                             </div>
                           </div>
