--- a/categories.html
+++ b/categories.html
@@ -87,6 +87,10 @@
     <script src="./lib/viblast.js"></script>
 
     <style>
+        body, input, .sort {
+          font-family: 'Open Sans', 'Roboto', 'Ysabeau SC', sans-serif;
+          font-weight: 300;
+        }
         .banner {
             top: 0;
             left: 0;
