--- a/video.html
+++ b/video.html
@@ -19,6 +19,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Watch Free Hentai Titties Now - Unlimited Hentai Stream" />
     <meta name="twitter:description" content="Hentai Titties - Watch free hentai video stream HD in English subtitles to watch and download the best hentaistream in 720p/1080p uncensored hentai" />
+    
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
     <link rel="icon" href="./favicon.ico">
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
