--- a/index.html
+++ b/index.html
@@ -90,25 +90,6 @@
           font-family: 'Open Sans', 'Roboto', 'Ysabeau SC', sans-serif;
           font-weight: 300;
         }
-        #myBtn {
-            display: none;
-            position: fixed;
-            bottom: 20px;
-            right: 30px;
-            z-index: 99;
-            font-size: 18px;
-            border: none;
-            outline: none;
-            background-color: red;
-            color: white;
-            cursor: pointer;
-            padding: 15px;
-            border-radius: 4px;
-        }
-
-            #myBtn:hover {
-                background-color: #555;
-            }
     </style>
 </head>
 
@@ -403,7 +384,7 @@
             let peakOfTheDayVideo = peakOfTheDayVideos[Math.floor(Math.random() * (peakOfTheDayVideos.length - 0) + 0)]
             
             const momentTimestamp = moment(peakOfTheDayVideo.releasedDate);
-            const stringDate = moment().format("MMM YYYY")
+            const stringDate = momentTimestamp.format("MMM YYYY")
             $("#peakOfTheDay").html(`<div class="row">
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-12 backgroundImage" style="border-radius:10px; background-image:linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),url('${peakOfTheDayVideo.poster_url}');background-repeat:no-repeat;">
                                                         <div class="row">
