--- a/noads/video.html
+++ b/noads/video.html
@@ -250,9 +250,9 @@
                                                             }}'
                                                         data-viblast-key="N8FjNTQ3NDdhZqZhNGI5NWU5ZTI=">
                                                     <source src="https://r2.1hanime.com/${finalData.link}.mp4" type="video/mp4">
-                                                </video></div>`);
-    
-                                                $("#related").html(`<div class="col-lg-12 col-md-12 col-sm-12 col-12 " style="padding:0%; background-color: #121212;">
+                                                </video></div> `);
+    console.log("sss")
+                                                $("#related").html(`  <br/><button id="downloadButton">Download File</button>  <div class="col-lg-12 col-md-12 col-sm-12 col-12 " style="padding:0%; background-color: #121212;">
                         
                         <ul class="tabs">
                             <li class="active" data-id="0">Same Brand</li>
@@ -294,6 +294,10 @@
                             </div>
                         </div>
                     </div>`);
+        document.getElementById('downloadButton').addEventListener('click', function() 
+        { var link = document.createElement('a'); link.href = `https://r2.1hanime.com/${finalData.link}.mp4`;
+                 link.download = `${finalData.link}.mp4`; // Replace with your desired file name and extension 
+                 link.click(); });
         var videosLatestFiltered = videos.slice(videos.length - 18,videos.length);
         videosLatestFiltered = videosLatestFiltered.reverse()
 
@@ -325,7 +329,6 @@
                                         </figure>
                                     </div>`);
         })
-
         const shuffledVideos = videos.sort(() => 0.5 - Math.random());
         let selectedShuffledVideos = shuffledVideos.slice(shuffledVideos.length - 18,shuffledVideos.length);
 
